syntax = "proto3";
package Protobuf;

enum NetConstants
{
    _zero = 0;
    ProtocolVersion = 100;
    ProtocolResponseIdMultiplier = 1000;
};

message NetPacket
{
    sint64 seq = 1;
    sint32 msgID = 2;
    bytes payload = 3;
}
